# SimplicialExtended

./: .gitignore  CMakeLists.txt  Cell.cpp  Cell.h  Hasse.cpp  Hasse.h  HyperGraph.cpp  HyperGraph.h  Node.h  README.md  SimplicialComplex.cpp  SimplicialComplex.h  generator.cpp  generator.h  module_creation.cpp  test.cpp  test_clique_matrix.cpp
analysis/: aggregator.py  classify.ipynb  dataset_converter.py  dataset_loader.py  draw_contacts_graph.ipynb  link_prediction.ipynb  network_builder.py  predictor.py  simpl_loader.py
dataset/: generate_image_dataset.py
datasets/chess_games/: chess.ipynb  chess_every_move.ipynb
datasets/contact-high-school/: high.ipynb
playground/: mda.ipynb  play.ipynb
src/: AbstractModel.cpp  AbstractModel.h  CombinatorialComplex.cpp  CombinatorialComplex.h  Graph.cpp  Graph.h  Hasse.cpp  Hasse.h  HyperGraph.cpp  HyperGraph.h  Node.cpp  Node.h  SimplicialComplex.cpp  SimplicialComplex.h  abstract_model.cpp  abstract_model.h
testing/: CMakeLists.txt  calc_mean_times.cpp  generate_image_dataset.py  generator.cpp  generator.h  plots.ipynb  test_clique_matrix.cpp  test_generating.cpp
tutorial/: example.ipynb
